| Summary: | ASTERISK-27902: chan_pjsip isn't updating hangupcause on 4XX responses | ||
| Reporter: | George Joseph (gjoseph) | Labels: | pjsip |
| Date Opened: | 2018-06-07 07:33:10 | Date Closed: | 2018-06-11 18:06:17 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 13.21.0 GIT 15.4.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | chan_pjsip only registers to receive responses that are classed as "after media". This precludes it getting responses like 486 BUSY and therefore the channel HANGUPCAUSE never gets set. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2018-06-11 18:06:18.375-0500 Change 9130 merged by Jenkins2: chan_pjsip: Register for "BEFORE_MEDIA" responses [https://gerrit.asterisk.org/9130|https://gerrit.asterisk.org/9130] By: Friendly Automation (friendly-automation) 2018-06-11 18:15:25.034-0500 Change 9132 merged by Jenkins2: chan_pjsip: Register for "BEFORE_MEDIA" responses [https://gerrit.asterisk.org/9132|https://gerrit.asterisk.org/9132] By: Friendly Automation (friendly-automation) 2018-06-12 10:22:45.883-0500 Change 9131 merged by Joshua Colp: chan_pjsip: Register for "BEFORE_MEDIA" responses [https://gerrit.asterisk.org/9131|https://gerrit.asterisk.org/9131] By: Friendly Automation (friendly-automation) 2021-01-11 11:35:16.492-0600 Change 15304 merged by Friendly Automation: chan_pjsip: Stop queueing control frames twice on outgoing channels [https://gerrit.asterisk.org/c/asterisk/+/15304|https://gerrit.asterisk.org/c/asterisk/+/15304] By: Friendly Automation (friendly-automation) 2021-01-11 12:16:57.653-0600 Change 15286 merged by Friendly Automation: chan_pjsip: Stop queueing control frames twice on outgoing channels [https://gerrit.asterisk.org/c/asterisk/+/15286|https://gerrit.asterisk.org/c/asterisk/+/15286] By: Friendly Automation (friendly-automation) 2021-01-11 12:48:11.942-0600 Change 15287 merged by George Joseph: chan_pjsip: Stop queueing control frames twice on outgoing channels [https://gerrit.asterisk.org/c/asterisk/+/15287|https://gerrit.asterisk.org/c/asterisk/+/15287] | ||